[tool.poetry]
name = "maxcut-tutorial"
version = "0.1.0"
description = "A tutorial project for the Maxcut problem."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "maxcut_tutorial" }]

[tool.poetry.dependencies]
python = "^3.10"
absl-py = "2.1.0"
amplify = "1.2.1"
annotated-types = "0.7.0"
asttokens = "2.4.1"
astunparse = "1.6.3"
cachetools = "5.5.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
cma = "4.0.0"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.3.0"
cryptography = "43.0.1"
cycler = "0.12.1"
debugpy = "1.8.6"
decorator = "5.1.1"
dill = "0.3.9"
docplex = "2.28.240"
exceptiongroup = "1.2.2"
executing = "2.1.0"
flatbuffers = "24.3.25"
fonttools = "4.54.1"
gast = "0.6.0"
google-auth = "2.35.0"
google-auth-oauthlib = "1.2.1"
google-pasta = "0.2.0"
grpcio = "1.66.2"
gurobi-optimods = "2.2.0"
gurobipy-pandas = "1.1.4"
h5py = "3.12.1"
ibm-cloud-sdk-core = "3.21.0"
ibm-platform-services = "0.57.1"
idna = "3.10"
ipykernel = "6.29.5"
ipython = "8.27.0"
jedi = "0.19.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
keras = "2.15.0"
kiwisolver = "1.4.7"
libclang = "18.1.1"
markdown = "3.7"
markupsafe = "3.0.1"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
ml-dtypes = "0.2.0"
mpmath = "1.3.0"
nest-asyncio = "1.6.0"
networkx = "3.3"
numpy = "1.26.4"
oauthlib = "3.2.2"
opt-einsum = "3.4.0"
packaging = "24.1"
pandas = "2.2.3"
parso = "0.8.4"
pbr = "6.1.0"
pillow = "10.4.0"
platformdirs = "4.3.6"
prompt-toolkit = "3.0.48"
protobuf = "4.25.5"
psutil = "6.0.0"
pure-eval = "0.2.3"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pydot = "3.0.2"
pygments = "2.18.0"
pyjwt = "2.9.0"
pylatexenc = "2.10"
pyparsing = "3.1.4"
pyspnego = "0.11.1"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pywin32 = "306"
pyzmq = "26.2.0"
qiskit = "1.2.2"
qiskit-aer = "0.15.1"
qiskit-algorithms = "0.3.0"
qiskit-ibm-runtime = "0.30.0"
qiskit-optimization = "0.6.1"
requests = "2.32.3"
requests-ntlm = "1.3.0"
requests-oauthlib = "2.0.0"
rsa = "4.9"
rustworkx = "0.15.1"
scipy = "1.14.1"
seaborn = "0.13.2"
sspilib = "0.1.0"
stack-data = "0.6.3"
stevedore = "5.3.0"
symengine = "0.13.0"
sympy = "1.13.3"
tensorboard = "2.15.2"
tensorboard-data-server = "0.7.2"
tensorflow = "2.15.0"
tensorflow-estimator = "2.15.0"
tensorflow-intel = "2.15.0"
tensorflow-io-gcs-filesystem = "0.31.0"
termcolor = "2.5.0"
traitlets = "5.14.3"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
websocket-client = "1.8.0"
werkzeug = "3.0.4"
python-dotenv = "0.21.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
