[tool.poetry]
name = "maxcut-tutorial"
version = "0.1.0"
description = "A tutorial project for the Maxcut problem."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "maxcut_tutorial" }]

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.2.2"
qiskit-aer = "^0.15.1"
qiskit-algorithms = "^0.3.0"
qiskit-ibm-runtime = "^0.30.0"
qiskit-optimization = "^0.6.1"
numpy = "*"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
pylatexenc = "^2.10"
amplify = "^1.2.1"
python-dotenv = "^1.0.1"
dwave-system = "^1.27.0"
scipy = "1.13.1"
notebook = "^7.2.2"
seaborn = "^0.13.2"
tqdm = "^4.66.6"
gurobi-optimods = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
